Fixed alignment for the text on top of the image

--- a/style.css
+++ b/style.css
@@ -253,6 +253,24 @@ aside {
   font-family: arial, helvetica, sans-serif;
   font-size: 13px;
   font-weight: lighter;
+  position: relative;
+}
+
+.image-container-top {
+  position: absolute;
+  display: flex;
+  top: 150px;
+}
+
+.image-container-top > p, .image-container-bottom > p {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.image-container-bottom {
+  position: absolute;
+  display: flex;
+  bottom: 40px;
 }
 
 .inf-span {
@@ -264,16 +282,26 @@ aside {
 #inf-author {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 60px;
 }
 
-/*.article-title {
-  margin-left: 35%;
-  margin-right: 35%;
-}*/
-
-
+.article-title {
+  display: block;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
 
 #butt3 {
   padding: 10px 100px;
   font-size: 13px;
+}
+
+.inflation-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
